snapshot-tests/tests/snapshots/parser__signed_radix__plus_hex.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[invalid-integer]: 
  ┌─ plus_hex:1:5
  │
1 │ a = +0x0
  │     ^^^^ invalid integer: signs are not allowed on prefixed integers
